# multi-agent-company

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  ideas.md  pyproject.toml
app/: __init__.py  main.py
app/api/: router.py
app/approval/: __init__.py  models.py  services.py
app/artifacts/: models.py  services.py
app/company/: __init__.py  bootstrap.py  models.py
app/ui/: router.py
dashboard-web/: index.html  package-lock.json  package.json  playwright.config.ts  tailwind.config.js  vite.config.ts
docs/: agency-agents-integration-strategy.md  ceo-agent-interaction-flows.md  memory-fabric-design.md  multi-agent-development-plan.md  one-person-company-org-model.md  openclaw-native-agent-plane.md  public-library-integration-plan.md  research-summary.md
scripts/: live_signoff.py  sync_skills.py
tests/: conftest.py  test_artifact_api.py  test_bootstrap_api.py  test_command_classification.py  test_command_intake.py  test_convergence_detector.py  test_conversation_api.py  test_dashboard_build.py  test_dashboard_ui.py  test_dead_letter_cleanup.py  test_feishu_api.py  test_feishu_command_handlers.py  test_feishu_commands.py  test_feishu_long_connection.py  test_memory_api.py  test_openclaw_api.py  test_persona_api.py  test_phase_feishu_integration.py  test_phase_orchestrator.py  test_phase_plan_parser.py  test_phase_protocol_parsing.py  test_phase_trace_and_hardening.py  test_quick_ack.py  test_relationship_resolver.py  test_runtime_api.py  test_session_rotation.py  test_skill_catalog.py  test_system_api.py  test_work_ticket_fsm.py
(+107 files in other folders)
